--- a/index.html
+++ b/index.html
@@ -27,21 +27,7 @@
 <body class="">
     <div id="app">
         <router-view></router-view>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </div>
 </body>
 
 </html>
