--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-demi/0.13.11/index.iife.js"></script>
     <script src="https://unpkg.com/vue-router@4.0.5/dist/vue-router.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script type="module" src="./app.js"></script>
 
 
@@ -26,7 +29,18 @@
 <body class="">
     <div id="app">
         <router-view></router-view>
+
+
+
+
+
     </div>
+
+    
+
+
+
+
 </body>
 
 </html>
